# year-in-data

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: deploy-year-in-data.yml  hello-world.yml  run-pipeline.yml  run_pipeline.yml
docs/: Discovery.md  GatheringData.md  Todo.md
docs/ManageData/: ManageData.module.css  ManageData.tsx
docs/ManageData/TableView/: TableView.tsx
pipeline/: .gitignore  main.py  requirements.txt  setup.py
pipeline/config/: .env-example  config.toml  config_loader.py
pipeline/yd_extractor/app_usage/: app_icon_scraper.py  app_info_map.py  schemas.py  screen_time.py
pipeline/yd_extractor/fitbit/: __init__.py  calories.py  exercise.py  schemas.py  (+3 more)
scripts/: build_website.sh  commit_to_gh_pages.sh  run-pipeline.sh  run_pipeline.sh
src/: App.tsx  index.css  main.tsx
src/api/: axiosClient.ts
src/components/: AnnualHeatmap.tsx  DataVis.tsx  Heatmap.tsx  Navbar.tsx  Select.tsx  ThemeController.tsx  heatmapUtils.ts
website/: vite.config.ts
website/src/: App.tsx  index.css
yd_pipeline/: Dockerfile  README.md  main.py  pyproject.toml
yd_pipeline/api/: main.py
yd_pipeline/tests/: test_utils.py
yd_pipeline/yd_pipeline/: download_from_drive.py  fetch_and_write.py  process_data.py  process_strong_data.py  utils.py
yd_pipeline/yd_pipeline/api/: main.py
yd_pipeline/yd_pipeline/graphql/: github_user_contributions.graphql
yd_pipeline/yd_pipeline/process_data/: fitbit.py  github.py  kindle.py  strong.py
yd_website/: index.html  package-lock.json  package.json
yd_website/src/: index.css
(+79 files in other folders)
